--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </nav>
     </header>
 
-    <section id="hero">
-        <div class="container col-sm-9 mt-5">
+    <section id="hero-top">
+        <div class="container col-sm-9 px-3">
             <div id="powerfull-btn" class="btn btn-lg">
                 POWERFULL
             </div>
@@ -61,11 +61,34 @@
             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur quia ipsam optio a quae corporis!
                 Reiciendis adipisci provident sed a numquam maiores quisquam accusantium facilis totam, autem fugit
                 voluptas vitae.</h3>
-            <div class="row ms-1">
-                <button id="signup-btn" class="col-5 col-md-4 col-lg-2 btn btn-large me-5 py-3">Sign Up</button>
-                <button id="details-btn" class="col-5 col-md-4 col-lg-2 btn btn-large py-3">Details</button>
+            <div class="row gap-2">
+                <button id="signup-btn" class="col-12 col-sm-5 col-md-4 col-lg-2 btn btn-large me-5">Sign Up</button>
+                <button id="details-btn" class="col-12 col-sm-5 col-md-4 col-lg-2 btn btn-large">Details</button>
             </div>
 
+        </div>
+    </section>
+
+    <section id="hero-bottom">
+        <div class="container col-sm-9">
+            <div class="row">
+                <div class="card-body col-10 col-sm-2 mx-5 mx-sm-0">
+                    <h4>325</h4>
+                    <h5>Course</h5>
+                </div>
+                <div class="card-body col-10 col-sm-2 mx-5 mx-sm-0">
+                    <h4>405</h4>
+                    <h5>Work Out</h5>
+                </div>
+                <div class="card-body col-10 col-sm-2 mx-5 mx-sm-0">
+                    <h4>305</h4>
+                    <h5>Working Hour</h5>
+                </div>
+                <div class="card-body col-10 col-sm-2 mx-5 mx-sm-0">
+                    <h4>705</h4>
+                    <h5>Happy Client</h5>
+                </div>
+            </div>
         </div>
     </section>
 
