--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section id="hero-bottom">
-        <div class="container col-sm-9">
+        <div class="container col-sm-9 px-3">
             <div class="row">
                 <div class="card-body col-10 col-sm-2 mx-5 mx-sm-0">
                     <h4>325</h4>
@@ -88,6 +88,30 @@
                     <h4>705</h4>
                     <h5>Happy Client</h5>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="our-classes">
+        <div class="container col-sm-9 px-3">
+            <h2>OUR CLASSES</h2>
+            <div id="underline" class="mt-2"></div>
+            <div class="mx-md-5 px-md-5"><p class="text-center mx-5 px-5 my-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ut aut quo! Est modi accusamus reprehenderit cum.</p></div>
+            <div id="btn-group" class="row gap-2 mb-5 px-sm-5">
+                <button id="yoga-btn" class="col-5 col-lg-2 btn btn-large">Yoga</button>
+                <button id="group-btn" class="col-5 col-lg-2 btn btn-large">Group</button>
+                <button id="solo-btn" class="col-5 col-lg-2 btn btn-large">Solo</button>
+                <button id="stretching-btn" class="col-5 col-lg-2 btn btn-large">Stretching</button>
+            </div>
+            <div id="yoga" class="row">
+                <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Yoga?</span><br><br>Lorem ipsum dolor sit amet
+                    consectetur adipisicing
+                    elit. Optio impedit cum ratione,
+                    dignissimos deserunt laborum facilis accusantium illum fugit, necessitatibus voluptatum illo
+                    exercitationem quibusdam. Deleniti mollitia qui ullam fugiat tenetur.<br><br><br><span>When comes Yoga
+                        Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
+                    12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
+                <img src="./images/yoga.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
             </div>
         </div>
     </section>
