--- a/index.html
+++ b/index.html
@@ -96,23 +96,65 @@
         <div class="container col-sm-9 px-3">
             <h2>OUR CLASSES</h2>
             <div id="underline" class="mt-2"></div>
-            <div class="mx-md-5 px-md-5"><p class="text-center mx-5 px-5 my-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ut aut quo! Est modi accusamus reprehenderit cum.</p></div>
-            <div id="btn-group" class="row gap-2 mb-5 px-sm-5">
-                <button id="yoga-btn" class="col-5 col-lg-2 btn btn-large">Yoga</button>
-                <button id="group-btn" class="col-5 col-lg-2 btn btn-large">Group</button>
-                <button id="solo-btn" class="col-5 col-lg-2 btn btn-large">Solo</button>
-                <button id="stretching-btn" class="col-5 col-lg-2 btn btn-large">Stretching</button>
+            <div class="mx-md-5 px-md-5">
+                <p class="text-center mx-5 px-5 my-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ut
+                    aut quo! Est modi accusamus reprehenderit cum.</p>
             </div>
-            <div id="yoga" class="row">
-                <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Yoga?</span><br><br>Lorem ipsum dolor sit amet
-                    consectetur adipisicing
-                    elit. Optio impedit cum ratione,
-                    dignissimos deserunt laborum facilis accusantium illum fugit, necessitatibus voluptatum illo
-                    exercitationem quibusdam. Deleniti mollitia qui ullam fugiat tenetur.<br><br><br><span>When comes Yoga
-                        Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
-                    12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
-                <img src="./images/yoga.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+            <div id="btn-group" class="row gap-3 mb-5 px-sm-5">
+                <button id="yoga-btn" class="col-5 col-lg-2 btn btn-large">Yoga<div id="yoga-btn-selector"></div>
+                </button>
+                <button id="group-btn" class="col-5 col-lg-2 btn btn-large">Group<div id="group-btn-selector"></div>
+                </button>
+                <button id="solo-btn" class="col-5 col-lg-2 btn btn-large">Solo<div id="solo-btn-selector"></div>
+                </button>
+                <button id="stretching-btn" class="col-5 col-lg-2 btn btn-large">Stretching<div
+                        id="stretching-btn-selector"></div></button>
             </div>
+
+            <div id="classes" class="container m-0 p-0">
+                <div id="yoga" class="row">
+                    <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Yoga?</span><br><br>Lorem ipsum dolor sit
+                        amet
+                        consectetur adipisicing
+                        elit. Optio impedit cum ratione,
+                        dignissimos deserunt laborum facilis accusantium illum fugit, necessitatibus voluptatum illo
+                        exercitationem quibusdam. Deleniti mollitia qui ullam fugiat tenetur.<br><br><br><span>When
+                            comes Yoga
+                            Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
+                        12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
+                    <img src="./images/yoga.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                </div>
+                <div id="group" class="row">
+                    <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Group?</span><br><br>Lorem, ipsum dolor
+                        sit amet consectetur adipisicing elit. Aliquid laboriosam accusantium, vitae iusto nam adipisci
+                        blanditiis eligendi? Dignissimos, hic illum adipisci eligendi quia numquam libero debitis quae
+                        dolorum, ipsum fugiat!<br><br><br><span>When comes Group
+                            Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
+                        12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
+                    <img src="./images/group.webp" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                </div>
+                <div id="solo" class="row">
+                    <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Solo?</span><br><br>Lorem ipsum dolor sit
+                        amet consectetur adipisicing elit. Id mollitia repudiandae, dolore, fuga incidunt quo libero
+                        magnam nihil voluptates tenetur harum cupiditate perferendis pariatur sequi, hic corrupti.
+                        Doloremque, quisquam tenetur.<br><br><br><span>When
+                            comes Solo
+                            Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
+                        12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
+                    <img src="./images/solo.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                </div>
+                <div id="stretching" class="row">
+                    <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Stretching?</span><br><br>Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Nesciunt distinctio provident fugiat a, earum,
+                        culpa quibusdam eaque obcaecati velit tenetur ducimus voluptatibus possimus commodi unde sed.
+                        Veritatis, aliquam? Doloribus, nihil.<br><br><br><span>When
+                            comes Stretching
+                            Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
+                        12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
+                    <img src="./images/stret.webp" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                </div>
+            </div>
+
         </div>
     </section>
 
