--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             comes Yoga
                             Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
                         12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
-                    <img src="./images/yoga.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                    <img src="./images/yoga.jpg" alt="yoga" class="col-12 col-sm-6 px-0 ps-sm-5">
                 </div>
                 <div id="group" class="row">
                     <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Group?</span><br><br>Lorem, ipsum dolor
@@ -131,7 +131,7 @@
                         dolorum, ipsum fugiat!<br><br><br><span>When comes Group
                             Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
                         12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
-                    <img src="./images/group.webp" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                    <img src="./images/group.webp" alt="group" class="col-12 col-sm-6 px-0 ps-sm-5">
                 </div>
                 <div id="solo" class="row">
                     <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Solo?</span><br><br>Lorem ipsum dolor sit
@@ -141,7 +141,7 @@
                             comes Solo
                             Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
                         12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
-                    <img src="./images/solo.jpg" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                    <img src="./images/solo.jpg" alt="solo" class="col-12 col-sm-6 px-0 ps-sm-5">
                 </div>
                 <div id="stretching" class="row">
                     <p class="col-12 col-sm-6 px-0 pe-sm-5"><span>Why are your Stretching?</span><br><br>Lorem ipsum
@@ -151,10 +151,40 @@
                             comes Stretching
                             Time.</span><br><br>Saturday-Sunday: 8:00am - 10:00am<br><br>Monday-Tuesday: 10:00am -
                         12:00am<br><br>Wednesday-Friday: 3:00am - 6:00am </p>
-                    <img src="./images/stret.webp" alt="" class="col-12 col-sm-6 px-0 ps-sm-5">
+                    <img src="./images/stret.webp" alt="stretching" class="col-12 col-sm-6 px-0 ps-sm-5">
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section id="bmi">
+        <div class="container col-sm-12 px-3">
+            <div class="row">
+                <div class="calculator col-sm-5 m-0 p-0">
+                    <h1 class="mb-4">BMI Calculator</h1>
+                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <div id="inputs" class="row">
+                        <div class="cm col-8 col-sm-5 mb-1 m-sm-0 p-0">
+                            <input type="number" id="height" class="input" name="height" min="1" max="250" placeholder="Your Height">
+                            <span>cm</span>
+                        </div>
+                        <div class="kg col-8 col-sm-5 p-0">
+                            <input type="number" id="weight" class="input" name="weight" min="1" max="500" placeholder="Your Weight">
+                            <span>kg</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="index col-sm-6 mt-4 m-sm-0 p-0">
+                    <h3>Your BMI</h3>
+                    <div id="bmi-index-img">
+                        <img src="./images/bmi-index.jpg" alt="bmi-index" class="col-12">
+                    <div id="cursor"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
