--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <h2>OUR CLASSES</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-5 my-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae ut
-                    aut quo! Est modi accusamus reprehenderit cum.</p>
+                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical at Hampden-Sydney College.</p>
             </div>
             <div id="btn-group" class="row gap-3 mb-5 px-sm-5">
                 <button id="yoga-btn" class="col-5 col-lg-2 btn btn-large">Yoga<div id="yoga-btn-selector"></div>
@@ -162,17 +162,21 @@
             <div class="row">
                 <div class="calculator col-sm-5 m-0 p-0">
                     <h1 class="mb-4">BMI Calculator</h1>
-                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                        piece of
                         classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                        piece of
                         classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     <div id="inputs" class="row">
                         <div class="cm col-8 col-sm-5 mb-1 m-sm-0 p-0">
-                            <input type="number" id="height" class="input" name="height" min="1" max="250" placeholder="Your Height">
+                            <input type="number" id="height" class="input" name="height" min="1" max="250"
+                                placeholder="Your Height">
                             <span>cm</span>
                         </div>
                         <div class="kg col-8 col-sm-5 p-0">
-                            <input type="number" id="weight" class="input" name="weight" min="1" max="500" placeholder="Your Weight">
+                            <input type="number" id="weight" class="input" name="weight" min="1" max="500"
+                                placeholder="Your Weight">
                             <span>kg</span>
                         </div>
                     </div>
@@ -181,8 +185,51 @@
                     <h3>Your BMI</h3>
                     <div id="bmi-index-img">
                         <img src="./images/bmi-index.jpg" alt="bmi-index" class="col-12">
-                    <div id="cursor"></div>
+                        <div id="cursor"></div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="trainers">
+        <div class="container col-sm-9 px-3">
+            <h2>OUR BEST TRAINERS</h2>
+            <div id="underline" class="mt-2"></div>
+            <div class="mx-md-5 px-md-5">
+                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical at Hampden-Sydney College.</p>
+            </div>
+            <div class="trainers row">
+                <div class="trainer col-12 col-sm-4 mb-5">
+                    <div class="img-frame">
+                        <img src="./images/trainer1.jpg" alt="trainer1" class="col-12">
+                        <div class="trainer-name">
+                            <h4>Jane Doe</h4>
+                            <p>Yoga Trainer</p>
+                        </div>
+                        <div class="frame"></div>
+                    </div>
+                </div>
+                <div class="trainer col-12 col-sm-4 mb-5">
+                    <div class="img-frame">
+                        <img src="./images/trainer2.jpg" alt="trainer2" class="col-12">
+                        <div class="trainer-name">
+                            <h4>John Doe</h4>
+                            <p>Fitness Trainer</p>
+                        </div>
+                        <div class="frame"></div>
+                    </div>
+                </div>
+                <div class="trainer col-12 col-sm-4 mb-5">
+                    <div class="img-frame">
+                        <img src="./images/trainer3.jpg" alt="trainer3" class="col-12">
+                        <div class="trainer-name">
+                            <h4>Jane Doe</h4>
+                            <p>Cardio Trainer</p>
+                        </div>
+                        <div class="frame"></div>
+                    </div>  
                 </div>
             </div>
         </div>
