--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sport Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -201,7 +202,7 @@
                     classical at Hampden-Sydney College.</p>
             </div>
             <div class="trainers row">
-                <div class="trainer col-12 col-sm-4 mb-5">
+                <div class="trainer col-12 col-sm-4 mb-5 mb-sm-4">
                     <div class="img-frame">
                         <img src="./images/trainer1.jpg" alt="trainer1" class="col-12">
                         <div class="trainer-name">
@@ -211,7 +212,7 @@
                         <div class="frame"></div>
                     </div>
                 </div>
-                <div class="trainer col-12 col-sm-4 mb-5">
+                <div class="trainer col-12 col-sm-4 mb-5 mb-sm-4">
                     <div class="img-frame">
                         <img src="./images/trainer2.jpg" alt="trainer2" class="col-12">
                         <div class="trainer-name">
@@ -221,7 +222,7 @@
                         <div class="frame"></div>
                     </div>
                 </div>
-                <div class="trainer col-12 col-sm-4 mb-5">
+                <div class="trainer col-12 col-sm-4 mb-5 mb-sm-4">
                     <div class="img-frame">
                         <img src="./images/trainer3.jpg" alt="trainer3" class="col-12">
                         <div class="trainer-name">
@@ -229,9 +230,73 @@
                             <p>Cardio Trainer</p>
                         </div>
                         <div class="frame"></div>
-                    </div>  
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="purchase">
+        <div class="container col-sm-9 px-3">
+            <h2>PURCHASE FROM US</h2>
+            <div id="underline" class="mt-2"></div>
+            <div class="mx-md-5 px-md-5">
+                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical at Hampden-Sydney College.</p>
+            </div>
+            <div class="row mb-5">
+                <div class="col-12 col-sm-6 col-lg-3 pe-sm-2 mb-2">
+                    <div class="card p-0">
+                        <img src="./images/purchase1.jpg" class="card-img-top" alt="purchase1">
+                        <div class="card-body">
+                            <p>Kettlebell / 5kg</p>
+                            <p id="price"><span>89.99$</span> / 59.99$</p>
+                        </div>
+                        <div class="card-footer">
+                            <i class="bi bi-cart-fill"></i>
+                            Add To Cart
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-2">
+                    <div class="card p-0">
+                        <img src="./images/purchase2.jpg" class="card-img-top" alt="purchase2">
+                        <div class="card-body">
+                            <p>Treadmill</p>
+                            <p id="price"><span>899.999$</span> / 599.999$</p>
+                        </div>
+                        <div class="card-footer">
+                            <i class="bi bi-cart-fill"></i>
+                            Add To Cart
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-2">
+                    <div class="card p-0">
+                        <img src="./images/purchase3.jpg" class="card-img-top" alt="purchase3">
+                        <div class="card-body">
+                            <p>Adjustable Dumbbell</p>
+                            <p id="price"><span>89.99$</span> / 59.99$</p>
+                        </div>
+                        <div class="card-footer">
+                            <i class="bi bi-cart-fill"></i>
+                            Add To Cart
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3 ps-sm-2 mb-2">
+                    <div class="card p-0">
+                        <img src="./images/purchase4.jpg" class="card-img-top" alt="purchase4">
+                        <div class="card-body">
+                            <p>Kettlebell / 3kg</p>
+                            <p id="price"><span>89.99$</span> / 59.99$</p>
+                        </div>
+                        <div class="card-footer">
+                            <i class="bi bi-cart-fill"></i>
+                            Add To Cart
+                        </div>
+                    </div>
+                </div>
         </div>
     </section>
 
