--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                     <p class="mb-4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
                         piece of
                         classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
                     <div id="inputs" class="row">
                         <div class="cm col-8 col-sm-5 mb-1 m-sm-0 p-0">
                             <input type="number" id="height" class="input" name="height" min="1" max="250"
@@ -182,6 +183,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="index col-sm-6 mt-4 m-sm-0 p-0">
                     <h3>Your BMI</h3>
                     <div id="bmi-index-img">
@@ -201,6 +203,7 @@
                 <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
+
             <div class="trainers row">
                 <div class="trainer col-12 col-sm-4 mb-5 mb-sm-4">
                     <div class="img-frame">
@@ -244,6 +247,7 @@
                 <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
+
             <div class="row mb-5">
                 <div class="col-12 col-sm-6 col-lg-3 pe-sm-2 mb-2">
                     <div class="card p-0">
@@ -297,6 +301,48 @@
                         </div>
                     </div>
                 </div>
+            </div>
+    </section>
+
+    <section id="review">
+        <div class="container col-sm-9 px-3">
+            <h2>REVIEW CLIENT</h2>
+            <div id="underline" class="mt-2"></div>
+            <div class="mx-md-5 px-md-5">
+                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical at Hampden-Sydney College.</p>
+            </div>
+            <div class="row">
+                <div class="client-card col-sm-6 p-0 pe-sm-5">
+                    <div class="client">
+                        <img src="./images/client1.jpg" alt="client1">
+                        <p>Diet Expert<br><span>CFO</span></p>
+                    </div>
+                    <div class="wrapper">
+                        <p class="client-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur,
+                            tempore?
+                            Reprehenderit
+                            natus quos illo veritatis tempore, nulla pariatur perferendis.</p>
+                        <div class="shadow-left"></div>
+                        <div class="shadow-right"></div>
+                    </div>
+                </div>
+                <div class="client-card col-sm-6 p-0 ps-sm-5">
+                    <div class="client">
+                        <img src="./images/client2.jpg" alt="client2">
+                        <p>Cardio Trainer<br><span>CEO</span></p>
+                    </div>
+                    <div class="wrapper">
+                        <p class="client-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur,
+                            tempore?
+                            Reprehenderit
+                            natus quos illo veritatis tempore, nulla pariatur perferendis.</p>
+                        <div class="shadow-left"></div>
+                        <div class="shadow-right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
