--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <body>
     <header class="header fixed-top" id="header">
         <nav class="navbar navbar-expand-sm py-0 px-0">
-            <div class="container col-sm-9">
+            <div class="container col-sm-9 px-0">
                 <div class="logo ms-3 ms-sm-0">
                     <img src="./images/logo.png" height="80px" width="auto" alt="Logo">
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -204,7 +204,7 @@
                     classical at Hampden-Sydney College.</p>
             </div>
 
-            <div class="trainers row">
+            <div class="trainers row px-3 px-sm-0">
                 <div class="trainer col-12 col-sm-4 mb-5 mb-sm-4">
                     <div class="img-frame">
                         <img src="./images/trainer1.jpg" alt="trainer1" class="col-12">
@@ -248,8 +248,8 @@
                     classical at Hampden-Sydney College.</p>
             </div>
 
-            <div class="row mb-5">
-                <div class="col-12 col-sm-6 col-lg-3 pe-sm-2 mb-2">
+            <div class="row px-4 px-sm-0 mb-5">
+                <div class="col-12 col-sm-6 col-lg-3 pe-sm-2 mb-3">
                     <div class="card p-0">
                         <img src="./images/purchase1.jpg" class="card-img-top" alt="purchase1">
                         <div class="card-body">
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-2">
+                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-3">
                     <div class="card p-0">
                         <img src="./images/purchase2.jpg" class="card-img-top" alt="purchase2">
                         <div class="card-body">
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-2">
+                <div class="col-12 col-sm-6 col-lg-3 px-sm-2 mb-3">
                     <div class="card p-0">
                         <img src="./images/purchase3.jpg" class="card-img-top" alt="purchase3">
                         <div class="card-body">
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3 ps-sm-2 mb-2">
+                <div class="col-12 col-sm-6 col-lg-3 ps-sm-2 mb-3">
                     <div class="card p-0">
                         <img src="./images/purchase4.jpg" class="card-img-top" alt="purchase4">
                         <div class="card-body">
