--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <h2>OUR CLASSES</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
-            <div id="btn-group" class="row gap-3 mb-5 px-sm-5">
+            <div id="btn-group" class="row gap-3 mb-5 px-3 px-sm-5">
                 <button id="yoga-btn" class="col-5 col-lg-2 btn btn-large">Yoga<div id="yoga-btn-selector"></div>
                 </button>
                 <button id="group-btn" class="col-5 col-lg-2 btn btn-large">Group<div id="group-btn-selector"></div>
@@ -200,7 +200,7 @@
             <h2>OUR BEST TRAINERS</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
 
@@ -244,7 +244,7 @@
             <h2>PURCHASE FROM US</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
 
@@ -309,7 +309,7 @@
             <h2>REVIEW CLIENT</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical at Hampden-Sydney College.</p>
             </div>
             <div class="row">
@@ -343,6 +343,49 @@
                 </div>
             </div>
         </div>
+        </div>
+    </section>
+
+    <section id="contact-us">
+        <div class="container col-sm-9 px-3">
+            <h2>CONTACT US</h2>
+            <div id="underline" class="mt-2"></div>
+            <div class="mx-md-5 px-md-5">
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical at Hampden-Sydney College.</p>
+            </div>
+            <div class="row mt-4">
+                <div class="appointment col-sm-6 px-4 mb-4">
+                    <div class="row">
+                        <div class="phone col-6 p-0">
+                            <h4>Mobile Number</h4>
+                            <span>+135 773 321 4442</span>
+                        </div>
+                        <div class="address col-6 p-0">
+                            <h4>Email Address</h4>
+                            <span>demo@demo.com</span>
+                        </div>
+                    </div>
+                    <h3 class="py-4 m-0">Make An Appointment</h3>
+                    <form action="/submit" method="post">
+                        <input type="text" id="name" name="name" placeholder="Your Name">
+                        
+                        <input type="email" id="email" name="email" placeholder="Your Email">
+                        
+                        <textarea id="message" name="message" rows="4" placeholder="Your Message"></textarea>
+                    </form>
+
+                </div>
+                <div class="map col-sm-6 px-4 mb-4">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d909.2276002831502!2d32.71118468964831!3d39.95782932939999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d337d0a0e0915b%3A0xf218e02bce5bf7bd!2sErgazi%2C%201830.%20Sk.%2071%20B%2C%2006370%20Yenimahalle%2FAnkara!5e0!3m2!1str!2str!4v1719532370810!5m2!1str!2str"
+                    width="100%" 
+                    height="400px" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                </div>
+            </div>
         </div>
     </section>
 
