--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><b>Home</b></a>
+                            <a class="nav-link" href="#hero-top"><b>Home</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><b>Classes</b></a>
+                            <a class="nav-link" href="#our-classes"><b>Classes</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><b>Trainer</b></a>
+                            <a class="nav-link" href="#trainers"><b>Trainer</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><b>Review</b></a>
+                            <a class="nav-link" href="#review"><b>Review</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><b>Contact</b></a>
+                            <a class="nav-link" href="#contact-us"><b>Contact</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="btn-join-us" href="#"><b>JOIN US</b></a>
@@ -98,7 +98,8 @@
             <h2>OUR CLASSES</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece
+                    of
                     classical at Hampden-Sydney College.</p>
             </div>
             <div id="btn-group" class="row gap-3 mb-5 px-3 px-sm-5">
@@ -200,7 +201,8 @@
             <h2>OUR BEST TRAINERS</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece
+                    of
                     classical at Hampden-Sydney College.</p>
             </div>
 
@@ -244,7 +246,8 @@
             <h2>PURCHASE FROM US</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece
+                    of
                     classical at Hampden-Sydney College.</p>
             </div>
 
@@ -309,7 +312,8 @@
             <h2>REVIEW CLIENT</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece
+                    of
                     classical at Hampden-Sydney College.</p>
             </div>
             <div class="row">
@@ -351,7 +355,8 @@
             <h2>CONTACT US</h2>
             <div id="underline" class="mt-2"></div>
             <div class="mx-md-5 px-md-5">
-                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece of
+                <p class="text-center mx-5 px-lg-5 my-5">Lorem Ipsum is not simply random text. It has roots in a piece
+                    of
                     classical at Hampden-Sydney College.</p>
             </div>
             <div class="row mt-4">
@@ -369,25 +374,71 @@
                     <h3 class="py-4 m-0">Make An Appointment</h3>
                     <form action="/submit" method="post">
                         <input type="text" id="name" name="name" placeholder="Your Name">
-                        
+
                         <input type="email" id="email" name="email" placeholder="Your Email">
-                        
+
                         <textarea id="message" name="message" rows="4" placeholder="Your Message"></textarea>
                     </form>
 
                 </div>
                 <div class="map col-sm-6 px-4 mb-4">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d909.2276002831502!2d32.71118468964831!3d39.95782932939999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d337d0a0e0915b%3A0xf218e02bce5bf7bd!2sErgazi%2C%201830.%20Sk.%2071%20B%2C%2006370%20Yenimahalle%2FAnkara!5e0!3m2!1str!2str!4v1719532370810!5m2!1str!2str"
-                    width="100%" 
-                    height="400px" 
-                    allowfullscreen="" 
-                    loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d909.2276002831502!2d32.71118468964831!3d39.95782932939999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d337d0a0e0915b%3A0xf218e02bce5bf7bd!2sErgazi%2C%201830.%20Sk.%2071%20B%2C%2006370%20Yenimahalle%2FAnkara!5e0!3m2!1str!2str!4v1719532370810!5m2!1str!2str"
+                        width="100%" height="400px" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="footer" id="footer">
+        <div class="container col-sm-9 px-0">
+            <div class="logo ms-3 ms-sm-0">
+                <img src="./images/logo.png" height="80px" width="auto" alt="Logo">
+            </div>
+            <p class="mx-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error veniam esse praesentium
+                expedita
+                similique minima! Maiores quas consequatur error quo nisi cupiditate aperiam reprehenderit asperiores.
+            </p>
+            <div class="row col-12 col-md-8 px-3">
+                <div class="information col-6">
+                    <h3>Information</h3>
+                    <ul>
+                        <li>
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Classes</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="links col-6">
+                    <h3>Helpfull Links</h3>
+                    <ul>
+                        <li>
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Supports</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Terms & Condition</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
